# extensions-configuration

./: .gitignore  README.md  catcode.yaml  pyproject.toml
extensions/configuration/: __init__.py  config.py  environment.py  hosting_environment.py  service.py
tests/: test_configuration.py  test_environment_var_config.py  test_set_defaults.py
