[tool.poetry]
name = "extensions-configuration"
version = "0.1.3"
description = ""
authors = ["Matias Wallenius <MatiWall@live.dk>"]
readme = "README.md"
packages = [
    {include  = "extensions/configuration"}
]

[[tool.poetry.source]]
name = "private"
url = "http://pypi.mw.local"



[tool.poetry.dependencies]
python = "^3.11"
pyyaml = "^6.0.1"
types-pyyaml = "^6.0.12.20240311"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
namespace_packages = true